feat: added jwt auth
