# src/models/VolontarioModel.js
@@ -1,13 +1,17 @@
 import mongoose from "mongoose";
-const collection = "volontari";
+const collection = "volunteers";
+
 const VolontarioSchema = new mongoose.Schema({
-  _id: { type: String, required: true },
+  // _id: { type: String, required: true },
   name: { type: String, required: true },
   surname: { type: String, required: true },
   email: { type: String, required: true },
   phone: { type: String, required: false },
   fiscalcode: { type: String, required: true },
   password: { type: String, required: true },
+  followedAssociations: { type: [String], required: false },
+  description: { type: String, required: false },
+  skills: { type: [String], required: false },
 });
 
 export default mongoose.model(collection, VolontarioSchema);
